<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="6dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:textStyle="bold"
            android:text="@string/date"
            style="@style/HeaderElement"/>

        <TextView
            android:textStyle="bold"
            android:text="@string/players"
            style="@style/HeaderElement"/>

        <TextView
            android:textStyle="bold"
            android:text="@string/round"
            style="@style/HeaderElement"/>

        <TextView
            android:textStyle="bold"
            android:text="@string/time"
            style="@style/HeaderElement"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tournaments_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="6dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/no_tournaments_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tournaments_found"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>