<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_tournament"
        android:text="@string/new_tournament"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/player_management"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:icon="@drawable/ic_create_black_24dp"
        style="@style/buttonStandardSw"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/player_management"
        android:text="@string/player_management"
        app:layout_constraintTop_toBottomOf="@id/new_tournament"
        app:layout_constraintBottom_toTopOf="@id/tournament_manager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/ic_people_black_24dp"
        style="@style/buttonStandardSw"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tournament_manager"
        android:text="@string/tournaments"
        app:layout_constraintTop_toBottomOf="@id/player_management"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/ic_folder_open_black_24dp"
        style="@style/buttonStandardSw"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-4157102350827209/9184916458">
    </com.google.android.gms.ads.AdView>
</androidx.constraintlayout.widget.ConstraintLayout>