<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/available_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/available_count"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/available"
        android:textColor="@color/availableText"
        android:textAppearance="@style/ListHeader"/>

    <TextView
        android:id="@+id/available_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/available_text"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/availableText"
        android:textAppearance="@style/ListHeader"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/available_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/available_text"
        app:layout_constraintBottom_toTopOf="@id/enroll_all"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        android:scrollbars="vertical"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/enrolled_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/enrolled_count"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/enrolled"
        android:textColor="@color/enrolledText"
        android:textAppearance="@style/ListHeader"/>

    <TextView
        android:id="@+id/enrolled_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/enrolled_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/enrolledText"
        android:textAppearance="@style/ListHeader"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/enrolled_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/enrolled_text"
        app:layout_constraintBottom_toTopOf="@id/confirm"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="vertical"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/enroll_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/enroll_all"/>

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/confirm"/>

</androidx.constraintlayout.widget.ConstraintLayout>